--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -30,6 +30,11 @@ body {
 html {
   scroll-behavior: smooth;
   overflow-y: scroll;
+  scroll-padding-top: $header-height;
+
+  @include respond-to('md') {
+    scroll-padding-top: $header-height-mobile;
+  }
 }
 
 // Base body styles
