--- a/src/scss/components/_releases.scss
+++ b/src/scss/components/_releases.scss
@@ -61,6 +61,43 @@
   }
 }
 
+.releases-slideshow-container {
+  display: grid;
+  grid-template-areas: "slide";
+  width: 100%;
+  min-height: calc(100vh - 160px);
+  z-index: 5;
+}
+
+.release-slide-layout {
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  gap: 60px;
+  min-height: calc(100vh - 260px);
+  padding: 0 map.get($spacing, '3xl');
+  padding-bottom: 100px;
+  max-width: 1400px;
+  margin: 0 auto;
+  box-sizing: border-box;
+
+  @include respond-to('lg') {
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 0 map.get($spacing, 'lg');
+    padding-top: 120px;
+    padding-bottom: 60px;
+    gap: 32px;
+  }
+
+  @include respond-to('md') {
+    padding-top: 100px;
+    padding-bottom: 50px;
+    gap: 24px;
+  }
+}
+
 // Background blur
 .release-bg-blur {
   @include absolute-fill;
@@ -75,11 +112,8 @@
 
 // Release slide
 .release-slide {
-  position: absolute;
-  top: 0;
-  left: 0;
+  grid-area: slide;
   width: 100%;
-  height: 100%;
   opacity: 0;
   visibility: hidden;
   transition: opacity $transition-slower, visibility $transition-slower;
